gitops/k8s/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &Name ui-deployment
spec:
  selector:
    matchLabels:
      app: *Name
  replicas: 1
  template:
    metadata:
      labels:
        app: *Name
    spec:
      containers:
        - name: ui-deployment-container
          image: samhumphreys/code:eb2b024c595f811321221582d6c832be5b38acd7
          volumeMounts:
          - name: tls
            mountPath: /gitops/k8s/secrets/ui-tls
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "code.ui:app"]
          resources:
            limits:
              cpu: 1
              memory: 1Gi
          ports:
            - name: http
              containerPort: 5000
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 12
            initialDelaySeconds: 10
            httpGet:
              path: /healthcheck
              scheme: HTTP
              port: 5000
      volumes:
        - name: ui-creds
          secret:
            secretName: ui-creds
        - name: tls
          secret:
            secretName: ui-tls
