gitops/k8s/ui/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  # Static IP created with - gcloud compute addresses create ui-static-ip --global
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ui-static-ip"
spec:
  backend:
    serviceName: ui-service
    servicePort: 80
